Fixed overflow issue

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -144,6 +144,7 @@ body {
     background-repeat: no-repeat;
     background-position: top;
     background-size: cover;
+    overflow: hidden;
 }
 
 .portfolio-title {
